--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@tamagui/react-native-media-driver": "1.74.8",
     "@tamagui/shorthands": "1.74.8",
     "@tamagui/themes": "1.74.8",
+    "@tamagui/toast": "^1.89.28",
+    "axios": "^1.6.7",
+    "burnt": "^0.12.2",
     "expo": "~50.0.5",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.2",
@@ -24,6 +27,8 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "md5": "^2.3.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
@@ -39,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tamagui/babel-plugin": "1.74.8",
+    "@types/md5": "^2.3.5",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
