--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "church-app",
   "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
     "android": "expo start --android",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
     "@react-navigation/native": "^6.1.7",
     "@tamagui/font-inter": "1.74.8",
@@ -46,16 +48,18 @@
     "@tamagui/babel-plugin": "1.74.8",
     "@types/md5": "^2.3.5",
     "@types/react": "~18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "ajv": "^7.2.4",
-    "eslint": "^8.50.0",
-    "eslint-config-universe": "^12.0.0",
-    "prettier": "^3.0.3",
-    "typescript": "^5.1.3"
-  },
-  "eslintConfig": {
-    "extends": "universe/native"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   },
   "resolutions": {
     "expo-modules-core": "~1.11.0"
