--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "md5": "^2.3.0",
-    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
@@ -40,8 +39,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "tamagui": "1.74.8",
-    "zod": "^3.22.4"
+    "tamagui": "1.74.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
